# lau-noncommutative-agents

./: AGENT.md  Cargo.toml  README.md
src/: algebra.rs  chern_character.rs  cyclic_cohomology.rs  dirac.rs  distance.rs  hilbert.rs  index_pairing.rs  k_theory.rs  lau_ecosystem.rs  lib.rs  nc_integral.rs  spectral_action.rs  spectral_triple.rs  tomita_takesaki.rs  type_classification.rs
tests/: integration.rs
